scraper/tests/trybuild/default_no_runtime_event.rs
use nv_redfish_scraper::RuntimeEvent;

fn main() {
    let _ = RuntimeEvent::GlobalThrottled;
}
